完善隐私保护、淘应用、通信卫士。启动页优化

--- a/app/src/main/res/layout/activity_common_number.xml
+++ b/app/src/main/res/layout/activity_common_number.xml
@@ -3,8 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
-    <include layout="@layout/toolbar_layout" />
+    <!--Toolbar-->
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/common_number_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/tool_bar_height"
+        android:background="?attr/colorPrimary"
+        android:minHeight="@dimen/tool_bar_height" />
 
     <ExpandableListView
         android:id="@+id/elv"
