--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -21,8 +21,14 @@
         <CheckBoxPreference
             android:key="@string/setting_black_number"
             android:layout="@layout/preference_item"
-            android:summary="骚扰拦截已关闭"
+            android:summary="通信拦截已关闭"
             android:title="@string/setting_black_number"
+            android:widgetLayout="@layout/switch_layout"/>
+        <CheckBoxPreference
+            android:key="@string/setting_app_lock"
+            android:layout="@layout/preference_item"
+            android:summary="隐私保护已关闭"
+            android:title="@string/setting_app_lock"
             android:widgetLayout="@layout/switch_layout"/>
         <Preference
             android:key="@string/setting_toast_id"
