--- a/app/src/main/res/layout/activity_call_sms_manager.xml
+++ b/app/src/main/res/layout/activity_call_sms_manager.xml
@@ -10,6 +10,8 @@
         android:id="@+id/toolbar_call_sms_manager"
         android:layout_width="match_parent"
         android:layout_height="@dimen/tool_bar_height"
+        app:popupTheme="@style/MyOptionMenuStyle"
+        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         android:background="?attr/colorPrimary"
         android:minHeight="@dimen/tool_bar_height" />
 
