--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,10 +17,10 @@
         android:minHeight="@dimen/tool_bar_height">
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="   安全卫士"
+            android:layout_gravity="center"
+            android:text="安全卫士"
             android:textColor="@color/white"
             android:textSize="20dp"
             android:textStyle="bold" />
@@ -29,7 +29,7 @@
     <RadioGroup
         android:id="@+id/layout_navigationActivity_tabs"
         android:layout_width="match_parent"
-        android:layout_height="44dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:gravity="center_vertical"
         android:orientation="horizontal">
