--- a/app/src/main/res/layout/activity_select_contact.xml
+++ b/app/src/main/res/layout/activity_select_contact.xml
@@ -2,12 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
     <!--Toolbar-->
     <android.support.v7.widget.Toolbar
         android:id="@+id/setup_tool_bar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/tool_bar_height"
+        app:popupTheme="@style/MyOptionMenuStyle"
+        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         android:background="?attr/colorPrimary"
         android:minHeight="@dimen/tool_bar_height" />
 
