--- a/app/src/main/res/layout/activity_taskmanager_setting.xml
+++ b/app/src/main/res/layout/activity_taskmanager_setting.xml
@@ -9,6 +9,8 @@
         android:id="@+id/toolbar_task_setting"
         android:layout_width="match_parent"
         android:layout_height="@dimen/tool_bar_height"
+        app:popupTheme="@style/MyOptionMenuStyle"
+        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         android:background="?attr/colorPrimary"
         android:minHeight="@dimen/tool_bar_height" />
 
