--- a/app/src/main/res/layout/list_item_task_manager.xml
+++ b/app/src/main/res/layout/list_item_task_manager.xml
@@ -12,6 +12,16 @@
         android:layout_height="match_parent"
         android:background="@drawable/ripple_button_bg">
 
+        <CheckBox
+            android:id="@+id/checkbox_task_item"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="5dip"
+            android:clickable="false"
+            android:focusable="false" />
+
         <ImageView
             android:id="@+id/iv_task_icon"
             android:layout_width="50dip"
@@ -25,6 +35,7 @@
             android:layout_height="wrap_content"
             android:layout_alignTop="@id/iv_task_icon"
             android:layout_toRightOf="@id/iv_task_icon"
+            android:layout_toLeftOf="@id/checkbox_task_item"
             android:ellipsize="end"
             android:maxWidth="270dp"
             android:singleLine="true"
@@ -44,14 +55,5 @@
             android:textColor="#88000000"
             android:textSize="14sp" />
 
-        <CheckBox
-            android:id="@+id/checkbox_task_item"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="5dip"
-            android:clickable="false"
-            android:focusable="false" />
     </RelativeLayout>
 </android.support.v7.widget.CardView>
