--- a/app/src/main/res/layout/list_applock_item.xml
+++ b/app/src/main/res/layout/list_applock_item.xml
@@ -1,29 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content"
+    android:background="@drawable/ripple_button_bg"
+    android:padding="10dp">
 
     <ImageView
         android:id="@+id/iv_icon"
         android:layout_width="50dp"
-        android:layout_height="50dp" />
+        android:layout_height="50dp"
+        android:layout_margin="5dp" />
+
+    <ImageView
+        android:id="@+id/iv_status"
+        android:layout_width="30dip"
+        android:layout_height="30dip"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true" />
 
     <TextView
-        android:textColor="#000000"
         android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
+        android:layout_toLeftOf="@id/iv_status"
         android:layout_toRightOf="@id/iv_icon"
+        android:ellipsize="end"
         android:text="程序名称"
+        android:textColor="#000000"
         android:textSize="20sp" />
-
-    <ImageView
-        android:layout_width="30dip"
-        android:id="@+id/iv_status"
-        android:layout_height="30dip"
-        android:layout_alignParentRight="true"
-         android:layout_centerVertical="true"
-        />
 
 </RelativeLayout>
