--- a/app/src/main/res/layout/activity_atools.xml
+++ b/app/src/main/res/layout/activity_atools.xml
@@ -1,20 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:fitsSystemWindows="true"
     android:orientation="vertical">
 
-    <!--Toolbar-->
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar_atools"
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/app_bar"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/tool_bar_height"
-        app:popupTheme="@style/MyOptionMenuStyle"
-        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:background="?attr/colorPrimary"
-        android:minHeight="@dimen/tool_bar_height" />
+        android:layout_height="wrap_content">
+        <!--Toolbar-->
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar_atools"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/tool_bar_height"
+            android:background="?attr/colorPrimary"
+            android:minHeight="@dimen/tool_bar_height"
+            app:popupTheme="@style/MyOptionMenuStyle"
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+    </android.support.design.widget.AppBarLayout>
 
     <TextView
         android:layout_width="fill_parent"
@@ -24,10 +29,10 @@
         android:drawableLeft="@drawable/atool_left"
         android:drawablePadding="10dp"
         android:gravity="center_vertical"
+        android:onClick="numberAddressQuery"
         android:paddingLeft="10dp"
         android:text="@string/query_location"
         android:textColor="#000000"
-        android:onClick="numberAddressQuery"
         android:textSize="18sp" />
 
     <TextView
@@ -38,9 +43,9 @@
         android:drawableLeft="@drawable/atool_left"
         android:drawablePadding="10dp"
         android:gravity="center_vertical"
+        android:onClick="commonNumberQuery"
         android:paddingLeft="10dp"
         android:text="@string/query_common"
-        android:onClick="commonNumberQuery"
         android:textColor="#000000"
         android:textSize="18sp" />
 
