--- a/app/src/main/res/layout/activity_lost_find.xml
+++ b/app/src/main/res/layout/activity_lost_find.xml
@@ -1,19 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
-    <!--Toolbar-->
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/lost_find_tool_bar"
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/tool_bar_height"
-        app:popupTheme="@style/MyOptionMenuStyle"
-        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:background="?attr/colorPrimary"
-        android:minHeight="@dimen/tool_bar_height" />
+        android:layout_height="wrap_content">
+        <!--Toolbar-->
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/lost_find_tool_bar"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/tool_bar_height"
+            android:background="?attr/colorPrimary"
+            android:minHeight="@dimen/tool_bar_height"
+            app:popupTheme="@style/MyOptionMenuStyle"
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+    </android.support.design.widget.AppBarLayout>
 
     <RelativeLayout
         android:layout_width="fill_parent"
@@ -34,8 +38,8 @@
             android:layout_alignParentRight="true"
             android:layout_marginRight="10dp"
             android:layout_marginTop="8dip"
-            android:textColor="@color/colorPrimary"
             android:text="xxxxx"
+            android:textColor="@color/colorPrimary"
             android:textSize="18sp" />
     </RelativeLayout>
 
@@ -43,7 +47,7 @@
 
     <RelativeLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content">
 
         <TextView
             android:layout_width="wrap_content"
@@ -69,9 +73,9 @@
         android:id="@+id/tv_lostfind_reset"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:padding="10dip"
-        android:clickable="true"
         android:background="@drawable/ripple_button_bg"
+        android:clickable="true"
+        android:padding="10dip"
         android:text="点击重新进入设置向导"
         android:textColor="@color/text_normal"
         android:textSize="18sp" />
@@ -81,30 +85,30 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp"
         android:background="#d6d8da"
         android:gravity="left"
-        android:textColor="@color/text_normal"
+        android:padding="5dp"
         android:paddingLeft="5dp"
-        android:text="功能简介" />
+        android:text="功能简介"
+        android:textColor="@color/text_normal" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
         android:lineSpacingMultiplier="1.2"
-        android:text="您可以在手机丢失后，向您的手机发送以下代码远程控制，辅助找回手机以及确保数据安全。"/>
+        android:padding="10dp"
+        android:text="您可以在手机丢失后，向您的手机发送以下代码远程控制，辅助找回手机以及确保数据安全。" />
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dip"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
         <ImageView
-            android:layout_marginLeft="5dip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="5dip"
             android:src="@android:drawable/btn_star_big_on" />
 
         <TextView
@@ -118,7 +122,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dip"
         android:layout_marginTop="10dip"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -136,7 +140,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dip"
         android:layout_marginTop="10dip"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -154,7 +158,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dip"
         android:layout_marginTop="10dip"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
         <ImageView
             android:layout_width="wrap_content"
