--- a/app/src/main/res/layout/activity_setup_safe.xml
+++ b/app/src/main/res/layout/activity_setup_safe.xml
@@ -1,25 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
-    <!--Toolbar-->
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/setup_tool_bar"
+
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/app_bar_setup_safe"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/tool_bar_height"
-        app:popupTheme="@style/MyOptionMenuStyle"
-        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:background="?attr/colorPrimary"
-        android:minHeight="@dimen/tool_bar_height" />
+        android:layout_height="wrap_content">
+        <!--Toolbar-->
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/setup_tool_bar"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/tool_bar_height"
+            android:background="?attr/colorPrimary"
+            android:minHeight="@dimen/tool_bar_height"
+            app:popupTheme="@style/MyOptionMenuStyle"
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+    </android.support.design.widget.AppBarLayout>
 
     <com.zurich.mobile.view.ViewPagerCompat
         android:id="@+id/pager_setup_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/layout_navigationActivity_tabs"
-        android:layout_below="@id/setup_tool_bar" />
+        android:layout_below="@id/app_bar_setup_safe" />
 
     <Button
         android:id="@+id/btn_setup1_over"
