--- a/app/src/main/res/layout/activity_black_number.xml
+++ b/app/src/main/res/layout/activity_black_number.xml
@@ -1,42 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <!--Toolbar-->
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/black_number_tool_bar"
+    android:layout_height="match_parent">
+
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/app_bar_black_number"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/tool_bar_height"
-        app:popupTheme="@style/MyOptionMenuStyle"
-        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:background="?attr/colorPrimary"
-        android:minHeight="@dimen/tool_bar_height" />
+        android:layout_height="wrap_content">
+        <!--Toolbar-->
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/black_number_tool_bar"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/tool_bar_height"
+            android:background="?attr/colorPrimary"
+            android:minHeight="@dimen/tool_bar_height"
+            app:popupTheme="@style/MyOptionMenuStyle"
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+    </android.support.design.widget.AppBarLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_black_number"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/black_number_tool_bar" />
+        android:layout_below="@id/app_bar_black_number" />
 
     <com.zurich.mobile.widget.HintView
         android:id="@+id/hint_black_number_hint"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/black_number_tool_bar" />
+        android:layout_below="@id/app_bar_black_number" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/btn_black_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:src="@drawable/ic_add_white"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
         android:layout_gravity="bottom|end"
-        app:backgroundTint="?attr/colorPrimary"
+        android:layout_margin="16dp"
         android:elevation="6dp"
+        android:src="@drawable/ic_add_white"
+        app:backgroundTint="?attr/colorPrimary"
         app:borderWidth="0dp"
         app:pressedTranslationZ="6dp"
-        app:rippleColor="#794e95e2"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true" />
+        app:rippleColor="#794e95e2" />
 </RelativeLayout>
