--- a/app/src/main/res/layout/activity_clean_cache.xml
+++ b/app/src/main/res/layout/activity_clean_cache.xml
@@ -2,38 +2,43 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-    <!--Toolbar-->
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar_clean_cache"
+    android:layout_height="match_parent">
+
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/app_bar_clean_cache"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/tool_bar_height"
-        android:background="?attr/colorPrimary"
-        android:minHeight="@dimen/tool_bar_height"
-        app:popupTheme="@style/MyOptionMenuStyle"
-        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+        android:layout_height="wrap_content">
+        <!--Toolbar-->
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar_clean_cache"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/tool_bar_height"
+            android:background="?attr/colorPrimary"
+            android:minHeight="@dimen/tool_bar_height"
+            app:popupTheme="@style/MyOptionMenuStyle"
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+    </android.support.design.widget.AppBarLayout>
 
     <ProgressBar
         android:id="@+id/pb_cache_clean"
-        android:layout_below="@id/toolbar_clean_cache"
         style="@style/Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_width="match_parent"
         android:layout_height="20dp"
+        android:layout_below="@id/app_bar_clean_cache"
         android:theme="@style/LinearProgress" />
 
     <TextView
         android:id="@+id/tv_status"
-        android:layout_below="@id/pb_cache_clean"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/pb_cache_clean"
         android:padding="5dp"
         android:text="正在扫描。。。" />
 
     <ScrollView
-        android:layout_below="@id/tv_status"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+        android:layout_height="fill_parent"
+        android:layout_below="@id/tv_status">
 
         <LinearLayout
             android:id="@+id/ll_container"
@@ -46,15 +51,15 @@
         android:id="@+id/fab_clean_cache"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:src="@drawable/ic_delete_all"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
         android:layout_gravity="bottom|end"
-        app:backgroundTint="?attr/colorPrimary"
+        android:layout_margin="16dp"
         android:elevation="6dp"
+        android:src="@drawable/ic_delete_all"
+        app:backgroundTint="?attr/colorPrimary"
         app:borderWidth="0dp"
         app:pressedTranslationZ="6dp"
-        app:rippleColor="#794e95e2"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true" />
+        app:rippleColor="#794e95e2" />
 
 </RelativeLayout>
